--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   </header>
   <main class="px-3">
     <h1>Let's Take Your Business <br class="d-none d-md-block" />From The Stone Age To Space Age.</h1>
-    <p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a> </p>
+    <p>Coming very soon.</p>
+    <!-- <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a> </p> -->
   </main>
   <footer class="mt-auto text-white-50">
    <div class="row">
