--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <main class="px-3">
   <div class="row">
   <div class="col-md-5 text-left"> 
-  <h3>COMING VERY SOON</h3>
+  <p style="margin-bottom: 5px;"><strong>COMING VERY SOON</strong></p>
   <img src="img/Soneta-logo-white.png" style="width: 100%; max-width: 250px; margin: 20px 0px;" />
     <h1>Let's Take Your Business <!--<br class="d-none d-md-block" />-->From The Stone Age To Space Age.</h1>
     <p>A completely integrated business operating solution for any size of company to manage your day-to-day, end-to-end operations.</p>
@@ -68,9 +68,10 @@
     <li>Customer Releations Management</li>
     <li>Sales and Marketing</li>
     <li>Retail and Online Selling</li>
-    <li>Forecast and Reporting</li>
-    <li>Third Party Inetgration</li>
+    <!--<li>Forecast and Reporting</li>
+    <li>Third Party Inetgration</li>-->
     </ul>
+    ...and more!
     </div>
   <div class="col-md-7 text-left"><img src="img/soneta-screens.png" style="width: 100%; max-width: 800px; margin: 0px 20px;" /></div>
   </div>
