--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </ul>
     ...and more!
     </div>
-  <div class="col-md-7 text-left"><img src="img/soneta-screens.png" style="width: 100%; max-width: 800px; margin: 0px 20px;" /></div>
+  <div class="col-md-7 text-left"><img src="img/soneta-screens2.png" style="width: 100%; max-width: 800px; margin: 0px 20px;" /></div>
   </div>
   
     <!-- <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a> </p> -->
