--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
    <div class="col-md-4 text-left"><img src="img/i8s-logo-w2.png" class="foot-logo" /></div>
    <div class="col-md-8 text-right"><strong><small>Contact Innov8 Software</small></strong> <a class="btn btn-link" href="mailto:info@innov8software.com">info@innov8software.com</a> | <a class="btn btn-link" href="tel:+639178623796">+639178623796</a>
    <br />
-   <small style="font-size: 0.9rem;">28th Floor Cityland Pasong Tamo Tower U2807, 2210 Chino Roces Avenue, Makati City, Metro Manila, Philippines 1230</small>
+   <small style="font-size: 0.9rem;">Makati Corporate Office: 28th Floor Cityland Pasong Tamo Tower U2807, 2210 Chino Roces Avenue, Makati City, Metro Manila, Philippines 1230</small>
    </div>
    </div>
   </footer>
