--- a/index.html
+++ b/index.html
@@ -28,31 +28,18 @@
 <meta name="theme-color" content="#ffffff">
 <style>
 .bd-placeholder-img { font-size: 1.125rem; text-anchor: middle; -webkit-user-select: none; -moz-user-select: none; user-select: none; }
-.text-left {text-align: left;}
-.text-right {text-align: right;}
-.btn.btn-link {color:#00aeef;}
-.btn.btn-link:hover {color:#f26522;}
-.foot-logo {margin-top: 30px;}
  @media (min-width: 768px) {
 .bd-placeholder-img-lg { font-size: 3.5rem; }
 }
- @media (max-width: 500px) {
-.text-left, .text-right {text-align: center;}
-.text-left ul li {text-align: left;}
-.coming-soon-txt {margin-top: 60px; margin-bottom: -15px !important;}
-}
-
-
-
 </style>
 
 <!-- Custom styles for this template -->
 <link href="css/style.css" rel="stylesheet">
 </head>
 <body class="d-flex h-100 text-center text-light home-body">
-<section class="container-fluid home-top-section">
-<div class="cover-container" style="background:url(img/cover-bg.jpg) center center no-repeat; background-size: cover;">
-<div class="container d-flex w-100 cover-home p-3 mx-auto flex-column">
+<section class="container-fluid home-top-section" style="background:url(img/cover-bg.jpg) center center no-repeat;">
+<div class="cover-container">
+<div class="home-content d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
       <img src="img/i8s-logo-w.png" class="top-logo" />
@@ -60,37 +47,14 @@
     </div>
   </header>
   <main class="px-3">
-  <div class="row">
-  <div class="col-md-5 text-left"> 
-  <p style="margin-bottom: 5px;" class="coming-soon-txt"><strong>COMING VERY SOON</strong></p>
-  <img src="img/Soneta-logo-white.png" style="width: 100%; max-width: 250px; margin: 20px 0px;" />
-    <h1>Let's Take Your Business <!--<br class="d-none d-md-block" />-->From The Stone Age To Space Age.</h1>
-    <p>A completely integrated business operating solution for any size of company to manage your day-to-day, end-to-end operations.</p>
-    <ul>
-    <li>Contact Management</li>
-    <li>Employee and Payroll Management</li>
-    <li>Inventory Management</li>
-    <li>Vendor/Purchasing Management</li>
-    <li>Customer Releations Management</li>
-    <li>Sales and Marketing</li>
-    <li>Retail and Online Selling</li>
-    <!--<li>Forecast and Reporting</li>
-    <li>Third Party Inetgration</li>-->
-    </ul>
-    ...and more!
-    </div>
-  <div class="col-md-7 text-left"><img src="img/soneta-screens4.png" style="width: 100%; max-width: 800px; margin: 0px 20px;" /></div>
-  </div>
-  
+    <h1>Let's Take Your Business <br class="d-none d-md-block" />From The Stone Age To Space Age.</h1>
+    <p>Coming very soon.</p>
     <!-- <p class="lead"> <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a> </p> -->
   </main>
   <footer class="mt-auto text-white-50">
    <div class="row">
-   <div class="col-md-2 text-left"><img src="img/i8s-logo-w2.png" class="foot-logo" /></div>
-   <div class="col-md-10 text-right"><strong><small>Contact Innov8 Software</small></strong> <a class="btn btn-link" href="mailto:info@innov8software.com">info@innov8software.com</a> | <a class="btn btn-link" href="tel:+639178623796">+639178623796</a>
-   <br />
-   <small style="font-size: 0.9rem;">Makati Corporate Office: 28th Floor Cityland Pasong Tamo Tower U2807, 2210 Chino Roces Avenue, Makati City, Metro Manila, Philippines 1230</small>
-   </div>
+   <div class="col"><img src="img/i8s-logo-w2.png" class="foot-logo" /></div>
+   <div class="col"></div>
    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
